@@ -1,3 +1,12 @@
+2008-04-02  Hidehisa Akiyama  <akky@users.sourceforge.jp>
+
+	* src/2dview.C:
+	* src/input_dev.h:
+	* src/smonitor_dev.C:
+	* src/smonitor_dev.h:
+	- supported automatic reconnection to the server. added new
+	options, 'auto_reconnect_mode' and 'auto_reconnect_wait'.
+
 2008-04-01  Hidehisa Akiyama  <akky@users.sourceforge.jp>
 
 	* src/smonitor_dev.C:
